syntax = "proto3";

package mvoter2015;

option java_package = "com.popstack.mvoter2015.data.cache";
option java_multiple_files = true;

message StateTownshipProto {
  string state_region = 1;
  string township = 2;
}